--- a/app/views/songs/index.html.erb
+++ b/app/views/songs/index.html.erb
@@ -1,4 +1,16 @@
 <!DOCTYPE html>
 
 <html>
+  <head>
+    <title>Songs</title>
+  </head>
+  <body>
+    <ul>
+      <% Song.all.each do |song| %>
+        <li><a href = <%= "#{song.to_slug}" %>>
+          <%= song.name %>
+        </a></li>
+      <% end %>
+    </ul>
+  </body>
 </html>
