--- a/app/views/artists/show.html.erb
+++ b/app/views/artists/show.html.erb
@@ -2,20 +2,20 @@
 
 <html>
   <head>
-    <title><%= artist.name %></title>
+    <title><%= @artist.name %></title>
   </head>
 
   <body>
     <ul>
-      <% artist.songs.each do |song| %>
-        <li><a href = <%= "#{song}" %>>
+      <% @artist.songs.each do |song| %>
+        <li><a href = <%= "../songs/#{song.to_slug}.html" %>>
           <%= song.name %>
         </a></li>
       <% end %>
     </ul>
     <ul>
-      <% artist.genres.each do |genre| %>
-        <li><a href = <%= "#{genre}" %>>
+      <% @artist.genres.each do |genre| %>
+        <li><a href = <%= "../genres/#{genre.to_slug}.html" %>>
           <%= genre.name %>
         </a></li>
       <% end %>
