--- a/app/views/genres/show.html.erb
+++ b/app/views/genres/show.html.erb
@@ -2,20 +2,20 @@
 
 <html>
   <head>
-    <title><%= genre.name %></title>
+    <title><%= @genre.name %></title>
   </head>
 
   <body>
     <ul>
-      <% genre.artists.each do |artist| %>
-        <li><a href = <%= "#{artist}" %>>
+      <% @genre.artists.each do |artist| %>
+        <li><a href = <%= "#../artists/{artist.to_slug}.html" %>>
           <%= artist.name %>
         </a></li>
       <% end %>
     </ul>
     <ul>
-      <% genre.songs.each do |song| %>
-        <li><a href = <%= "#{song}" %>>
+      <% @genre.songs.each do |song| %>
+        <li><a href = <%= "../songs/#{song.to_slug}.html" %>>
           <%= song.name %>
         </a></li>
       <% end %>
