--- a/app/views/songs/show.html.erb
+++ b/app/views/songs/show.html.erb
@@ -7,12 +7,12 @@
 
   <body>
     <ul>
-      <li><a href = <%= "#{song.artist.name}" %>>
+      <li><a href = <%= "../artists/#{song.artist.name}.html" %>>
           <%= "#{song.artist.name}" %>
       </a></li>
     </ul>
     <ul>
-      <li><a href = <%= "#{song.genre.name}" %>>
+      <li><a href = <%= "../genres/#{song.genre.name}.html" %>>
         <%= "#{song.genre.name}" %>
       </a></li>
     </ul>
